facet-diff/tests/snapshots/diff_snapshots__diff_options_none_vs_some.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before───────────╮[0m
[36m│[0mNone             [36m│[0m
[36m╰─────────────────╯[0m
[32m╭After────────────╮[0m
[32m│[0mSome(42)         [32m│[0m
[32m╰─────────────────╯[0m
[33m╔Diff═════════════╗[0m
[33m║[0m[31mNone[39m → [32mSome(42)[39m  [33m║[0m
[33m╚═════════════════╝[0m
