facet-diff/tests/snapshots/diff_snapshots__diff_options_some_vs_none.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before───────────╮[0m
[38;2;86;95;137m│[0m[2mSome([0m[38;2;224;81;95m42[39m[2m)[0m         [38;2;86;95;137m│[0m
[38;2;86;95;137m╰─────────────────╯[0m
[38;2;86;95;137m╭After────────────╮[0m
[38;2;86;95;137m│[0m[2mNone[0m             [38;2;86;95;137m│[0m
[38;2;86;95;137m╰─────────────────╯[0m
[38;2;224;175;104m╔Diff═════════════╗[0m
[38;2;224;175;104m║[0m[38;2;247;118;142mSome(42)[39m → [38;2;115;218;202mNone[39m  [38;2;224;175;104m║[0m
[38;2;224;175;104m╚═════════════════╝[0m
