facet-diff/tests/snapshots/diff_snapshots__diff_scalar_bool_true_to_false.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────╮
│true          │
╰──────────────╯
╭After─────────╮
│false         │
╰──────────────╯
╔Diff══════════╗
║true → false  ║
╚══════════════╝
