facet-diff/tests/snapshots/diff_snapshots__diff_scalar_byte_slice_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────────╮
│[u8] [               │
│   68 65 6c 6c 6f    │
│]                    │
╰─────────────────────╯
╭After────────────────╮
│[u8] [               │
│   77 6f 72 6c 64    │
│]                    │
╰─────────────────────╯
╔Diff═════════════════╗
║[                    ║
║  - 104              ║
║  - 101              ║
║  - 108              ║
║  - 108              ║
║  + 119              ║
║  .. 1 unchanged item║
║  + 114              ║
║  + 108              ║
║  + 100              ║
║]                    ║
╚═════════════════════╝
