facet-diff/tests/snapshots/diff_snapshots__diff_scalar_byte_slice_empty_vs_nonempty.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────╮
│[u8][]        │
╰──────────────╯
╭After─────────╮
│[u8] [        │
│   64 61 74 61│
│]             │
╰──────────────╯
╔Diff══════════╗
║[             ║
║  + 100       ║
║  + 97        ║
║  + 116       ║
║  + 97        ║
║]             ║
╚══════════════╝
