facet-diff/tests/snapshots/diff_snapshots__diff_scalar_byte_slice_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│[u8] [              │
│   68 65 6c 6c 6f   │
│]                   │
╰────────────────────╯
╭After───────────────╮
│[u8] [              │
│   68 65 6c 6c 6f   │
│]                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
