facet-diff/tests/snapshots/diff_snapshots__diff_scalar_byte_slice_vs_vec_u8.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│[u8] [              │
│   01 02 03         │
│]                   │
╰────────────────────╯
╭After───────────────╮
│Vec<u8> [           │
│   01 02 03         │
│]                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
