facet-diff/tests/snapshots/diff_snapshots__diff_scalar_f32_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────╮
│3.1415927              │
╰───────────────────────╯
╭After──────────────────╮
│2.7182817              │
╰───────────────────────╯
╔Diff═══════════════════╗
║3.1415927 → 2.7182817  ║
╚═══════════════════════╝
