facet-diff/tests/snapshots/diff_snapshots__diff_scalar_f32_nan.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│NaN         │
╰────────────╯
╭After───────╮
│NaN         │
╰────────────╯
╔Diff════════╗
║NaN → NaN   ║
╚════════════╝
