facet-diff/tests/snapshots/diff_snapshots__diff_scalar_f32_zero_vs_negative_zero.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│0                   │
╰────────────────────╯
╭After───────────────╮
│-0                  │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
