facet-diff/tests/snapshots/diff_snapshots__diff_scalar_f64_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────────────╮
│3.141592653589793                      │
╰───────────────────────────────────────╯
╭After──────────────────────────────────╮
│2.718281828459045                      │
╰───────────────────────────────────────╯
╔Diff═══════════════════════════════════╗
║3.141592653589793 → 2.718281828459045  ║
╚═══════════════════════════════════════╝
